--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,6 +1,4 @@
 .socials {
-
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,18 +13,18 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    fill: $network-icon-color;
+    fill: $gray-icon-cl;
     transition-property: background-color, fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &--dark {
-      fill: $hero-color;
-      background-color: $network-bg-color;
+      fill: $light-txt-cl;
+      background-color: $gray-bg-cl-10;
     }
   }
   &__link:hover,
   &__link:focus {
-    fill: $hero-color;
-    background-color: $accent-bg-color;
+    fill: $white-bg-cl;
+    background-color: $accent-bg-cl;
   }
 }
