--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,11 +4,11 @@
   margin-left: auto;
   margin-right: auto;
 
-  background-color: $hero-bg-color;
+  background-color: $gray-bg-cl;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: $overlay-bg-color;
+  background-color: $silver-bg-cl;
 
   // Desktop styles
   @media screen and (min-width: 1200px) {
@@ -16,39 +16,40 @@
   }
 
   &--overlay {
+    max-width: 1600px;
     @media (min-width: 320px) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
         url(/images/hero-img-480x1.jpg);
 
       @media (min-resolution: 2dppx) {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
           url(/images/hero-img-480x2.jpg);
       }
     }
     @media (min-width: 480px) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
         url(/images/hero-img-480x1.jpg);
 
       @media (min-resolution: 2dppx) {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
           url(/images/hero-img-480x2.jpg);
       }
     }
     @media (min-width: 768px) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
         url(/images/hero-img-768x1.jpg);
 
       @media (min-resolution: 2dppx) {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
           url(/images/hero-img-768x2.jpg);
       }
     }
     @media (min-width: 1200px) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
         url(/images/hero-img-1200x1.jpg);
 
       @media (min-resolution: 2dppx) {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        background-image: linear-gradient($dark-gray-cl-40, $dark-gray-cl-40),
           url(/images/hero-img-1200x2.jpg);
       }
     }
@@ -66,7 +67,7 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
-  color: $hero-color;
+  color: $light-txt-cl;
 
   // Desktop styles
   @media screen and (min-width: 1200px) {
@@ -93,12 +94,12 @@
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px $box-shadow-color;
+  box-shadow: 0px 4px 4px $dark-cl-15;
   border-radius: 4px;
   border: 4px solid transparent;
 
-  color: $hero-color;
-  background-color: $accent-color;
+  color: $light-txt-cl;
+  background-color: $accent-bg-cl;
 
   // Desktop styles
   @media screen and (min-width: 1200px) {
