--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,4 +1,3 @@
-// reset start
 html {
   box-sizing: border-box;
 }
@@ -14,21 +13,16 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
-a {
-  text-decoration: none;
-  color: inherit;
-}
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-} 
-// reset end
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
