--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
 
-  background: $backdrop-bg-color;
+  background: $dark-bg-cl-20;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    overflow-y: scroll;
