--- a/sass/components/_mobile.menu.scss
+++ b/sass/components/_mobile.menu.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 796px;
     padding: 48px 40px;
-    background-color: $header-bg-color;
+    background-color: $white-bg-cl;
     &.is-open {
       display: block;
     }
@@ -29,17 +29,17 @@
       line-height: calc(47 / 40);
       letter-spacing: 0.02em;
 
-      color: $title-text-color;
+      color: $dark-txt-cl;
       transition-property: color;
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
     &__link:hover,
     &__link:focus {
-      color: $accent-color;
+      color: $accent-txt-cl;
     }
     &__link--current {
-      color: $accent-color;
+      color: $accent-txt-cl;
     }
   }
   .menu-contacts {
@@ -58,13 +58,13 @@
       line-height: calc(28 / 24);
       letter-spacing: 0.02em;
 
-      color: $primary-text-color;
+      color: $main-txt-cl;
     }
     &__link--mobile {
       font-weight: 500;
       font-size: 34px;
       line-height: calc(40 / 34);
-      color: $accent-color;
+      color: $accent-txt-cl;
     }
   }
   .menu-socials {
@@ -82,13 +82,13 @@
       line-height: calc(22 / 18);
       letter-spacing: 0.02em;
 
-      color: $accent-color;
+      color: $accent-txt-cl;
     }
   }
   .menu-button {
     position: absolute;
-    top: 22px;
-    right: 17px;
+    top: 6px;
+    right: 0px;
 
     border: none;
     background-color: transparent;
@@ -112,7 +112,7 @@
 
   .mobile-btn-icon__close:hover,
   .mobile-btn-icon__close:focus {
-    fill: $accent-color;
+    fill: $accent-txt-cl;
   }
 }
 @media screen and(min-width: 768px) {
