--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -37,12 +37,12 @@
       min-width: 270px;
       height: 120px;
 
-      background-color: $team-bg-color;
+      background-color: $light-bg-cl;
       border-radius: 4px;
     }
     &__list .item:not(:last-child) {
       margin-right: 30px;
-    }
+    } 
     &__list {
       display: flex;
     }
@@ -53,7 +53,7 @@
     line-height: calc(16 / 14);
     font-size: 14px;
     text-transform: uppercase;
-    color: $title-text-color;
+    color: $dark-txt-cl;
   }
   &__text {
     margin-bottom: 0px;
