--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -11,7 +11,7 @@
       font-size: 36px;
       line-height: 1.17;
       text-align: center;
-      color: $title-text-color;
+      color: $dark-txt-cl;
     }
     &__list {
       display: flex;
@@ -31,13 +31,13 @@
       min-height: 70px;
       align-items: center;
       justify-content: center;
-      background-color: rgba(47, 48, 58, 0.8);
+      background-color: $dark-gray-cl-80;
     }
     &__subtitle {
       font-weight: 700;
       line-height: 1.14;
       text-transform: uppercase;
-      color: $hero-color;
+      color: $light-txt-cl;
     }
   }
 }
