--- a/sass/layouts/_product.scss
+++ b/sass/layouts/_product.scss
@@ -2,15 +2,15 @@
 
 &__link:hover,
 &__link:focus {
-  box-shadow: 0px 1px 1px $modal-shadow-color-12, 0px 4px 4px $product-shadow-color,
-    1px 4px 6px $product-shadow-color-16;
+  box-shadow: 0px 1px 1px $dark-cl-12, 0px 4px 4px $dark-cl-06,
+    1px 4px 6px $dark-cl-16;
 }
 &__position {
-  background-color: $header-bg-color;
+  background-color: $white-bg-cl;
 }
 &__link{
   display: block;
-  background-color: $header-bg-color;
+  background-color: $white-bg-cl;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -18,9 +18,9 @@
 &__meta {
   padding: 20px 24px;
 
-  border-right: 1px solid $cs-border-color;
-  border-bottom: 1px solid $cs-border-color;
-  border-left: 1px solid $cs-border-color;
+  border-right: 1px solid $border-light-cl;
+  border-bottom: 1px solid $border-light-cl;
+  border-left: 1px solid $border-light-cl;
 }
 &__heading {
   margin-bottom: 4px;
@@ -30,13 +30,13 @@
   line-height: 2;
   letter-spacing: 0.06em;
 
-  color: $title-text-color;
+  color: $dark-txt-cl;
 }
 &__position {
   font-size: 16px;
   line-height: 1.88;
 
-  color: $primary-text-color;
+  color: $main-txt-cl;
 }
 &__wrap {
   position: relative;
@@ -50,7 +50,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: $thumb-overley-bg-color;
+  background-color: $blue-bg-cl-90;
   transform: translateY(+100%);
   transition-property: transform;
   transition-duration: 250ms;
@@ -64,7 +64,7 @@
   font-size: 18px;
   line-height: 1.56;
 
-  color: $hero-color;
+  color: $light-txt-cl;
 }
 }
 
