--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -4,7 +4,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: calc(19 / 16);
-    color: $title-text-color;
+    color: $dark-txt-cl;
   }
   &__position {
     margin-bottom: 16px;
@@ -13,12 +13,12 @@
     text-align: center;
   }
 
-  background-color: $team-bg-color;
+  background-color: $light-bg-cl;
   &__title {
     font-weight: 700;
 
     text-align: center;
-    color: $title-text-color;
+    color: $dark-txt-cl;
   }
   @media screen and (max-width: 767px) {
     &__item {
@@ -37,7 +37,7 @@
       flex-basis: calc((100% - 30px) / 2);
     }
   }
-  @media screen and (min-width: 320px)   and (max-width: 1199px) {
+  @media screen and (min-width: 320px) and (max-width: 1199px) {
     &__title {
       font-size: 28px;
       line-height: calc(33 / 28);
@@ -61,7 +61,7 @@
 
   &__wrap {
     padding: 30px 0;
-    background-color: $header-bg-color;
+    background-color: $white-bg-cl;
   }
 
   &__name {
@@ -71,7 +71,7 @@
     line-height: calc(19 / 16);
     text-align: center;
 
-    color: $title-text-color;
+    color: $dark-txt-cl;
   }
   &__position {
     margin-bottom: 16px;
@@ -80,8 +80,7 @@
     text-align: center;
   }
   &__item {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 3px $dark-cl-12, 0px 1px 1px $dark-cl-14, 0px 2px 1px $dark-bg-cl-20;
     border-radius: 0px 0px 4px 4px;
   }
 }
