--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -2,7 +2,8 @@
   padding: 0;
   margin: 0;
   list-style: none;
-} 
-%section {
-  padding: 94px 0px;
+}
+%animation {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
