--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,13 @@
   margin: -1px;
 }
 
-.contacts, .nav__list {
+.contacts, .nav__list, .menu-socials__list, .menu-contacts__list, .menu-nav__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.contacts__link, .nav__link {
+.contacts__link, .nav__link, .menu-nav__link {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -137,36 +137,62 @@ a {
   color: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .menu-container {
     display: none;
-    top: 100%;
-    left: 0;
-    width: 100%;
+  }
+  .menu-container.is-open {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    left: -15px;
+    top: -16px;
+    width: 480px;
     height: 796px;
     padding: 48px 40px;
     background-color: #ffffff;
   }
-  .menu-container.is-open {
-    display: block;
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
   }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-nav__list {
     display: flex;
     flex-direction: column;
     margin-bottom: 302px;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-nav__list {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-nav__item:not(:last-child) {
     margin-bottom: 32px;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-nav__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-nav__link {
+    display: block;
+    margin-right: auto;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.175;
     letter-spacing: 0.02em;
     color: #212121;
     transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .menu-nav__link:hover, .menu-nav__link:focus {
     color: #2196f3;
@@ -174,15 +200,36 @@ a {
   .menu-nav__link--current {
     color: #2196f3;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-nav__link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-contacts__list {
     display: flex;
     flex-direction: column;
     margin-bottom: 64px;
   }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-contacts__item:not(:last-child) {
     margin-bottom: 32px;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-contacts__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-contacts__link {
+    display: block;
+    margin-right: auto;
     font-weight: 500;
     font-size: 24px;
     line-height: 1.1666666667;
@@ -190,18 +237,41 @@ a {
     color: #757575;
   }
   .menu-contacts__link--mobile {
-    font-weight: 500;
     font-size: 34px;
     line-height: 1.1764705882;
     color: #2196f3;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-contacts__link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-socials__list {
     display: flex;
     align-items: center;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-socials__list {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-socials__item:not(:last-child) {
     margin-right: 20px;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-socials__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-socials__link {
     font-weight: 500;
     font-size: 18px;
@@ -209,40 +279,52 @@ a {
     letter-spacing: 0.02em;
     color: #2196f3;
   }
+}
+@media screen and (min-width: 768px) {
+  .menu-socials__link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
   .menu-button {
     position: absolute;
     top: 6px;
     right: 0px;
+    z-index: 2;
     border: none;
     background-color: transparent;
   }
-  .menu-button .mobile-btn-icon__menu {
-    display: none;
-  }
-  .menu-button.is-open .mobile-btn-icon__menu {
-    display: block;
-  }
-  .menu-button.is-open .mobile-btn-icon__close {
-    display: none;
-  }
-  .mobile-btn-icon__close {
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-btn-icon__close:hover,
-.mobile-btn-icon__close:focus {
-    fill: #2196f3;
-  }
 }
 @media screen and (min-width: 768px) {
-  .menu-container {
-    display: none;
-  }
   .menu-button {
     display: none;
   }
 }
+
+.menu-button .mobile-btn-icon__menu {
+  display: none;
+}
+
+.menu-button.is-open .mobile-btn-icon__menu {
+  display: block;
+}
+
+.menu-button.is-open .mobile-btn-icon__close {
+  display: none;
+}
+
+.mobile-btn-icon__close {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-btn-icon__close:hover,
+.mobile-btn-icon__close:focus {
+  fill: #2196f3;
+}
+
 .socials {
   display: flex;
   align-items: center;
