--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-/* Fonts */
-/* Text colors */
-/* Others colors */
-/* BG colors */
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -21,7 +17,7 @@
   list-style: none;
 }
 
-.contacts__link, .nav__link, .menu-nav__link {
+.contacts__link, .nav__link, .mobile-btn-icon__close, .menu-nav__link {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -302,26 +298,22 @@ a {
   }
 }
 
-.menu-button .mobile-btn-icon__menu {
-  display: none;
-}
-
-.menu-button.is-open .mobile-btn-icon__menu {
-  display: block;
-}
-
-.menu-button.is-open .mobile-btn-icon__close {
-  display: none;
+@media screen and (max-width: 767.98px) {
+  .menu-button .mobile-btn-icon__menu {
+    display: none;
+  }
+  .menu-button.is-open .mobile-btn-icon__menu {
+    display: block;
+  }
 }
 
 .mobile-btn-icon__close {
   transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.mobile-btn-icon__close:hover,
-.mobile-btn-icon__close:focus {
+.menu-button.is-open .mobile-btn-icon__close {
+  display: none;
+}
+.mobile-btn-icon__close:hover, .mobile-btn-icon__close:focus {
   fill: #2196f3;
 }
 
@@ -734,108 +726,111 @@ a {
 }
 
 .hero {
-  padding: 118px 0px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1600px;
   background-color: #2f303a;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: #c4c4c4;
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    padding: 200px 0px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
-.hero--overlay {
-  max-width: 1600px;
-}
-@media (min-width: 320px) {
+
+@media screen and (max-width: 767.98px) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x1.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@1x_sm.jpg);
   }
 }
-@media (min-width: 320px) and (min-resolution: 2dppx) {
+@media screen and (max-width: 767.98px) and (min-device-pixel-ratio: 2), screen and (max-width: 767.98px) and (min-resolution: 192dpi), screen and (max-width: 767.98px) and (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x2.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@2x_sm.jpg);
   }
 }
-@media (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x1.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@1x_md.jpg);
   }
 }
-@media (min-width: 480px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-480x2.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@2x_md.jpg);
   }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-768x1.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@1x_lg.jpg);
   }
 }
-@media (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-768x2.jpg);
-  }
-}
-@media (min-width: 1200px) {
-  .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-1200x1.jpg);
-  }
-}
-@media (min-width: 1200px) and (min-resolution: 2dppx) {
-  .hero--overlay {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img-1200x2.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img/hero-bg@2x_lg.jpg);
   }
 }
 
 .hero__title {
-  width: 360px;
-  font-size: 26px;
-  line-height: 1.6153846154;
-  font-weight: 900;
-  text-align: center;
-  letter-spacing: 0.06em;
-  margin-right: auto;
+  display: block;
+  width: 320px;
   margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
+  text-align: center;
   color: #ffffff;
+}
+@media screen and (max-width: 767.98px) {
+  .hero__title {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 1.5416666667;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 480px) {
+  .hero__title {
+    width: 360px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.6153846154;
+    letter-spacing: 0.06em;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
     width: 696px;
+    font-weight: 900;
     font-size: 44px;
     line-height: 1.3636363636;
+    letter-spacing: 0.06em;
   }
 }
 
 .hero__button {
-  display: inline-block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  font-family: inherit;
+  padding: 6px 20px;
+  min-width: 200px;
   font-weight: 700;
   font-size: 16px;
-  min-width: 200px;
-  padding: 10px 24px;
   line-height: 1.875;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 4px solid transparent;
-  color: #ffffff;
-  background-color: #2196f3;
 }
 @media screen and (min-width: 1200px) {
   .hero__button {
+    padding-left: 28px;
+    padding-right: 28px;
     min-width: 216px;
-    padding: 10px 32px;
   }
 }
 
