--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,8 +1,8 @@
-/* Fonts */
+// Fonts 
 $main-font: 'Roboto', sans-serif;
 $secondary-font: 'Raleway', sans-serif;
 
-/* Text colors */
+// Text colors 
 $main-txt-cl: #757575;
 $accent-txt-cl: #2196f3;
 $light-txt-cl: #ffffff;
@@ -11,7 +11,7 @@ $dark-txt-cl: #212121;
 $light-gray-txt-cl-60: rgba(255, 255, 255, 0.6);
 $gray-txt-cl-50:rgba(117, 117, 117, 0.5);
 
-/* Others colors */
+// Others colors 
 $border-light-cl: #eeeeee;
 $border-light-gray-cl: #ececec;
 $border-gray-cl-30: rgba(255, 255, 255, 0.3);
@@ -31,7 +31,7 @@ $dark-cl-14: rgba(0, 0, 0, 0.14);
 $dark-cl-15: rgba(0, 0, 0, 0.15);
 $dark-cl-16:rgba(0, 0, 0, 0.16); 
 
-/* BG colors */
+// BG colors 
 $white-bg-cl: #ffffff;
 $light-bg-cl: #f5f4fa;
 $light-gray-bg-cl: #f5f5f5;
