--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   list-style: none;
 }
 
-.contacts__link, .nav__link, .mobile-btn-icon__close, .menu-nav__link {
+.contacts__link, .nav__link, .modal, .backdrop, .mobile-btn-icon__close, .menu-nav__link {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -133,20 +133,27 @@ a {
   color: #ffffff;
 }
 
-@media screen and (max-width: 767.98px) {
-  .menu-container {
-    display: none;
-  }
+.menu-container {
+  display: none;
+}
+.menu-container.is-open {
+  display: block;
+  margin-top: -16px;
+  margin-left: -15px;
+  margin-right: -15px;
+  position: relative;
+  z-index: 1;
+  left: 0px;
+  bottom: 32px;
+  min-width: 320px;
+  height: 796px;
+  padding: 36px 30px;
+  background-color: #ffffff;
+}
+@media screen and (min-width: 480px) {
   .menu-container.is-open {
-    display: block;
-    position: absolute;
-    z-index: 1;
-    left: -15px;
-    top: -16px;
     width: 480px;
-    height: 796px;
     padding: 48px 40px;
-    background-color: #ffffff;
   }
 }
 @media screen and (min-width: 768px) {
@@ -222,25 +229,41 @@ a {
   }
 }
 
-@media screen and (max-width: 767.98px) {
+.menu-contacts__link {
+  display: block;
+  margin-right: auto;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+@media screen and (min-width: 480px) {
   .menu-contacts__link {
-    display: block;
-    margin-right: auto;
     font-weight: 500;
     font-size: 24px;
     line-height: 1.1666666667;
     letter-spacing: 0.02em;
     color: #757575;
   }
-  .menu-contacts__link--mobile {
-    font-size: 34px;
-    line-height: 1.1764705882;
-    color: #2196f3;
-  }
 }
 @media screen and (min-width: 768px) {
   .menu-contacts__link {
     display: none;
+  }
+}
+.menu-contacts__link--mobile {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.2142857143;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .menu-contacts__link--mobile {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.1764705882;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -256,7 +279,10 @@ a {
   }
 }
 
-@media screen and (max-width: 767.98px) {
+.menu-socials__item {
+  margin-right: 10px;
+}
+@media screen and (min-width: 480px) {
   .menu-socials__item:not(:last-child) {
     margin-right: 20px;
   }
@@ -267,13 +293,19 @@ a {
   }
 }
 
-@media screen and (max-width: 767.98px) {
+.menu-socials__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2857142857;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 480px) {
   .menu-socials__link {
     font-weight: 500;
     font-size: 18px;
     line-height: 1.2222222222;
     letter-spacing: 0.02em;
-    color: #2196f3;
   }
 }
 @media screen and (min-width: 768px) {
@@ -354,7 +386,7 @@ a {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: opacity;
   overflow-y: scroll;
 }
 .backdrop.is-hidden {
@@ -366,19 +398,22 @@ a {
 }
 
 .modal {
-  padding: 40px;
+  padding: 20px;
   position: absolute;
   left: 50%;
   top: 400px;
+  z-index: 3;
+  min-width: 320px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: opacity;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal {
     width: 450px;
+    padding: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -386,6 +421,7 @@ a {
     width: 528px;
   }
 }
+
 .modal__btn {
   position: absolute;
   top: 8px;
