--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,5 +1,5 @@
-.backdrop{
-    position: fixed;
+.backdrop {
+  position: fixed;
   left: 0px;
   top: 0px;
 
@@ -8,13 +8,16 @@
 
   background: $dark-bg-cl-20;
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   overflow-y: scroll;
+  transition-property: opacity;
+  @extend%animation;
+  overflow-y: scroll;
 
   &.is-hidden {
-  opacity: 0;
-  pointer-events: none;}
+    opacity: 0;
+    pointer-events: none;
+  }
 
   &.is-hidden .modal {
-  transform: translate(-50%, -50%);}
+    transform: translate(-50%, -50%);
+  }
 }
