--- a/sass/components/_mobile.menu.scss
+++ b/sass/components/_mobile.menu.scss
@@ -1,18 +1,23 @@
 // Mobile-menu-container
 .menu-container {
-  @include mq(mob-only) {
-    display: none;
+  display: none;
 
-    &.is-open {
-      display: block;
-      position: absolute;
-      z-index: 1;
-      left: -15px;
-      top: -16px;
+  &.is-open {
+    display: block;
+    margin-top: -16px;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
+    z-index: 1;
+    left: 0px;
+    bottom: 32px;
+    min-width: 320px;
+    height: 796px;
+    padding: 36px 30px;
+    background-color: $white-bg-cl;
+    @include mq(mob) {
       width: 480px;
-      height: 796px;
       padding: 48px 40px;
-      background-color: $white-bg-cl;
     }
   }
   @include mq(tab) {
@@ -83,18 +88,23 @@
   }
 }
 .menu-contacts__link {
-  @include mq(mob-only) {
-    display: block;
-    margin-right: auto;
+  display: block;
+  margin-right: auto;
+  @include fonts(20px, 24px, 500, 0.02em);
+
+  @include mq(mob) {
     @include fonts(24px, 28px, 500, 0.02em);
     color: $main-txt-cl;
-    &--mobile {
-      @include fonts(34px, 40px);
-      color: $accent-txt-cl;
-    }
   }
   @include mq(tab) {
     display: none;
+  }
+  &--mobile {
+    @include fonts(28px, 34px, 500, 0.02em);
+    color: $accent-txt-cl;
+    @include mq(mob) {
+      @include fonts(34px, 40px, 500, 0.02em);
+    }
   }
 }
 // Mobile-menu-socials
@@ -109,7 +119,8 @@
   }
 }
 .menu-socials__item {
-  @include mq(mob-only) {
+  margin-right: 10px;
+  @include mq(mob) {
     &:not(:last-child) {
       margin-right: 20px;
     }
@@ -119,9 +130,10 @@
   }
 }
 .menu-socials__link {
-  @include mq(mob-only) {
+  @include fonts(14px, 18px, 500, 0.02em);
+  color: $accent-txt-cl;
+  @include mq(mob) {
     @include fonts(18px, 22px, 500, 0.02em);
-    color: $accent-txt-cl;
   }
   @include mq(tab) {
     display: none;
