--- a/sass/components/_mobile.menu.scss
+++ b/sass/components/_mobile.menu.scss
@@ -1,31 +1,86 @@
-// Mobile-menu-container
-.menu-container {
-  display: none;
+// Mobile-menu-button
+.mobile-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  &.is-open {
-    display: block;
-    margin-top: -16px;
-    margin-left: -15px;
-    margin-right: -15px;
-    position: relative;
-    z-index: 1;
-    left: 0px;
-    bottom: 32px;
-    min-width: 320px;
-    height: 796px;
-    padding: 36px 30px;
-    background-color: $white-bg-cl;
-    @include mq(mob) {
-      width: 480px;
-      padding: 48px 40px;
-    }
-  }
+  padding: 0;
+  margin-left: auto;
+  margin-right: 8px;
+
+  background-color: transparent;
+  border: none;
+
+  cursor: pointer;
+
   @include mq(tab) {
     display: none;
   }
 }
+// Mobile-menu-container
+.mobile-menu {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
+  max-width: 480px;
+  height: inherit;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 36px 30px;
+
+  background-color: $white-bg-cl;
+
+  transform: translateX(0);
+  @extend%animation;
+  .backdrop--is-hidden & {
+    transform: translateX(100%);
+  }
+  @include mq(mob) {
+    padding: 48px 40px;
+  }
+
+  @include mq(tab) {
+    display: none;
+  }
+}
+
+.mobile-menu-btn {
+  position: absolute;
+  top: 21px;
+  right: 20px;
+
+  padding: 0;
+
+  background-color: transparent;
+  border: none;
+
+  cursor: pointer;
+
+  transition-property: fill;
+  @extend%animation;
+
+  &:hover,
+  &:focus {
+    fill: $accent-txt-cl;
+  }
+}
+
+.mobile-btn-icon__menu {
+  @include mq(mob-only) {
+    .menu-button & {
+      display: none;
+    }
+    .menu-button.is-open & {
+      display: block;
+    }
+  }
+}
+
+
 // Mobile-menu-navigation
-.menu-nav__list {
+.mobile-menu-nav__list {
   @extend%list;
   @include mq(mob-only) {
     display: flex;
@@ -36,7 +91,7 @@
     display: none;
   }
 }
-.menu-nav__item {
+.mobile-menu-nav__item {
   @include mq(mob-only) {
     &:not(:last-child) {
       margin-bottom: 32px;
@@ -46,7 +101,7 @@
     display: none;
   }
 }
-.menu-nav__link {
+.mobile-menu-nav__link {
   @extend%animation;
 
   @include mq(mob-only) {
@@ -69,7 +124,7 @@
   }
 }
 // Mobile-menu-contacts
-.menu-contacts__list {
+.mobile-menu-contacts__list {
   @extend%list;
   @include mq(mob-only) {
     display: flex;
@@ -77,7 +132,7 @@
     margin-bottom: 64px;
   }
 }
-.menu-contacts__item {
+.mobile-menu-contacts__item {
   @include mq(mob-only) {
     &:not(:last-child) {
       margin-bottom: 32px;
@@ -87,7 +142,7 @@
     display: none;
   }
 }
-.menu-contacts__link {
+.mobile-menu-contacts__link {
   display: block;
   margin-right: auto;
   @include fonts(20px, 24px, 500, 0.02em);
@@ -108,7 +163,7 @@
   }
 }
 // Mobile-menu-socials
-.menu-socials__list {
+.mobile-menu-socials__list {
   @extend%list;
   @include mq(mob-only) {
     display: flex;
@@ -118,7 +173,7 @@
     display: none;
   }
 }
-.menu-socials__item {
+.mobile-menu-socials__item {
   margin-right: 10px;
   @include mq(mob) {
     &:not(:last-child) {
@@ -129,7 +184,7 @@
     display: none;
   }
 }
-.menu-socials__link {
+.mobile-menu-socials__link {
   @include fonts(14px, 18px, 500, 0.02em);
   color: $accent-txt-cl;
   @include mq(mob) {
@@ -137,42 +192,5 @@
   }
   @include mq(tab) {
     display: none;
-  }
-}
-// Mobile-menu-button
-.menu-button {
-  @include mq(mob-only) {
-    position: absolute;
-    top: 6px;
-    right: 0px;
-    z-index: 2;
-
-    border: none;
-    background-color: transparent;
-  }
-  @include mq(tab) {
-    display: none;
-  }
-}
-.mobile-btn-icon__menu {
-  @include mq(mob-only) {
-    .menu-button & {
-      display: none;
-    }
-    .menu-button.is-open & {
-      display: block;
-    }
-  }
-}
-.mobile-btn-icon__close {
-  .menu-button.is-open & {
-    display: none;
-  }
-  transition-property: fill;
-  @extend%animation;
-
-  &:hover,
-  &:focus {
-    fill: $accent-txt-cl;
   }
 }
