--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,13 @@
   margin: -1px;
 }
 
-.contacts, .nav__list, .menu-socials__list, .menu-contacts__list, .menu-nav__list {
+.contacts, .nav__list, .mobile-menu-socials__list, .mobile-menu-contacts__list, .mobile-menu-nav__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.contacts__link, .nav__link, .modal, .backdrop, .mobile-btn-icon__close, .menu-nav__link {
+.contacts__link, .nav__link, .modal, .backdrop, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -133,201 +133,61 @@ a {
   color: #ffffff;
 }
 
-.menu-container {
-  display: none;
+.mobile-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-left: auto;
+  margin-right: 8px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
-.menu-container.is-open {
-  display: block;
-  margin-top: -16px;
-  margin-left: -15px;
-  margin-right: -15px;
+@media screen and (min-width: 768px) {
+  .mobile-btn {
+    display: none;
+  }
+}
+
+.mobile-menu {
   position: relative;
-  z-index: 1;
-  left: 0px;
-  bottom: 32px;
-  min-width: 320px;
-  height: 796px;
+  display: flex;
+  flex-direction: column;
+  max-width: 480px;
+  height: inherit;
+  margin-left: auto;
+  margin-right: auto;
   padding: 36px 30px;
   background-color: #ffffff;
+  transform: translateX(0);
+}
+.backdrop--is-hidden .mobile-menu {
+  transform: translateX(100%);
 }
 @media screen and (min-width: 480px) {
-  .menu-container.is-open {
-    width: 480px;
+  .mobile-menu {
     padding: 48px 40px;
   }
 }
 @media screen and (min-width: 768px) {
-  .menu-container {
+  .mobile-menu {
     display: none;
   }
 }
 
-@media screen and (max-width: 767.98px) {
-  .menu-nav__list {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 302px;
-  }
+.mobile-menu-btn {
+  position: absolute;
+  top: 21px;
+  right: 20px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition-property: fill;
 }
-@media screen and (min-width: 768px) {
-  .menu-nav__list {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-nav__item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-nav__item {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-nav__link {
-    display: block;
-    margin-right: auto;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-    color: #212121;
-    transition-property: color;
-  }
-  .menu-nav__link:hover, .menu-nav__link:focus {
-    color: #2196f3;
-  }
-  .menu-nav__link--current {
-    color: #2196f3;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-nav__link {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-contacts__list {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 64px;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-contacts__item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-contacts__item {
-    display: none;
-  }
-}
-
-.menu-contacts__link {
-  display: block;
-  margin-right: auto;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
-@media screen and (min-width: 480px) {
-  .menu-contacts__link {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.1666666667;
-    letter-spacing: 0.02em;
-    color: #757575;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-contacts__link {
-    display: none;
-  }
-}
-.menu-contacts__link--mobile {
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 1.2142857143;
-  letter-spacing: 0.02em;
-  color: #2196f3;
-}
-@media screen and (min-width: 480px) {
-  .menu-contacts__link--mobile {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.1764705882;
-    letter-spacing: 0.02em;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-socials__list {
-    display: flex;
-    align-items: center;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-socials__list {
-    display: none;
-  }
-}
-
-.menu-socials__item {
-  margin-right: 10px;
-}
-@media screen and (min-width: 480px) {
-  .menu-socials__item:not(:last-child) {
-    margin-right: 20px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-socials__item {
-    display: none;
-  }
-}
-
-.menu-socials__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2857142857;
-  letter-spacing: 0.02em;
-  color: #2196f3;
-}
-@media screen and (min-width: 480px) {
-  .menu-socials__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.2222222222;
-    letter-spacing: 0.02em;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-socials__link {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .menu-button {
-    position: absolute;
-    top: 6px;
-    right: 0px;
-    z-index: 2;
-    border: none;
-    background-color: transparent;
-  }
-}
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
+.mobile-menu-btn:hover, .mobile-menu-btn:focus {
+  fill: #2196f3;
 }
 
 @media screen and (max-width: 767.98px) {
@@ -339,14 +199,156 @@ a {
   }
 }
 
-.mobile-btn-icon__close {
-  transition-property: fill;
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-nav__list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 302px;
+  }
 }
-.menu-button.is-open .mobile-btn-icon__close {
-  display: none;
+@media screen and (min-width: 768px) {
+  .mobile-menu-nav__list {
+    display: none;
+  }
 }
-.mobile-btn-icon__close:hover, .mobile-btn-icon__close:focus {
-  fill: #2196f3;
+
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-nav__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-nav__link {
+    display: block;
+    margin-right: auto;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: color;
+  }
+  .mobile-menu-nav__link:hover, .mobile-menu-nav__link:focus {
+    color: #2196f3;
+  }
+  .mobile-menu-nav__link--current {
+    color: #2196f3;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-nav__link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-contacts__list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-contacts__item {
+    display: none;
+  }
+}
+
+.mobile-menu-contacts__link {
+  display: block;
+  margin-right: auto;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+@media screen and (min-width: 480px) {
+  .mobile-menu-contacts__link {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-contacts__link {
+    display: none;
+  }
+}
+.mobile-menu-contacts__link--mobile {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.2142857143;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .mobile-menu-contacts__link--mobile {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.1764705882;
+    letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .mobile-menu-socials__list {
+    display: flex;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-socials__list {
+    display: none;
+  }
+}
+
+.mobile-menu-socials__item {
+  margin-right: 10px;
+}
+@media screen and (min-width: 480px) {
+  .mobile-menu-socials__item:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-socials__item {
+    display: none;
+  }
+}
+
+.mobile-menu-socials__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2857142857;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .mobile-menu-socials__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2222222222;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-socials__link {
+    display: none;
+  }
 }
 
 .socials {
@@ -384,16 +386,17 @@ a {
   top: 0px;
   width: 100%;
   height: 100%;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition-property: opacity;
-  overflow-y: scroll;
 }
-.backdrop.is-hidden {
+.backdrop--is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal {
+.backdrop--is-hidden .modal {
   transform: translate(-50%, -50%);
 }
 
@@ -402,7 +405,7 @@ a {
   position: absolute;
   left: 50%;
   top: 400px;
-  z-index: 3;
+  z-index: 100;
   min-width: 320px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -597,17 +600,9 @@ a {
   }
 }
 
-@media screen and (max-width: 767.98px) {
-  .nav {
-    position: relative;
-    display: block;
-  }
-}
-@media screen and (min-width: 768px) {
-  .nav {
-    display: flex;
-    align-items: center;
-  }
+.nav {
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (max-width: 767.98px) {
@@ -767,7 +762,6 @@ a {
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
-  background-color: #2f303a;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
