--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -5,19 +5,20 @@
 
   width: 100%;
   height: 100%;
+  z-index:1000;
 
   background: $dark-bg-cl-20;
   opacity: 1;
   transition-property: opacity;
   @extend%animation;
-  overflow-y: scroll;
 
-  &.is-hidden {
+  &--is-hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
   }
 
-  &.is-hidden .modal {
+  &--is-hidden .modal {
     transform: translate(-50%, -50%);
   }
 }
