--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
-  background-color: $gray-bg-cl;
+  // background-color: $gray-bg-cl;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
