--- a/css/main.css
+++ b/css/main.css
@@ -154,16 +154,17 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   max-width: 480px;
   height: inherit;
   margin-left: auto;
   margin-right: auto;
   padding: 36px 30px;
   background-color: #ffffff;
-  transform: translateX(0);
+  transform: translateY(0);
 }
 .backdrop--is-hidden .mobile-menu {
-  transform: translateX(100%);
+  transform: translateY(-100%);
 }
 @media screen and (min-width: 480px) {
   .mobile-menu {
@@ -191,19 +192,10 @@ a {
 }
 
 @media screen and (max-width: 767.98px) {
-  .menu-button .mobile-btn-icon__menu {
-    display: none;
-  }
-  .menu-button.is-open .mobile-btn-icon__menu {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
   .mobile-menu-nav__list {
     display: flex;
     flex-direction: column;
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
 }
 @media screen and (min-width: 768px) {
@@ -304,6 +296,9 @@ a {
   }
 }
 
+.mobile-menu-socials__list {
+  margin-top: auto;
+}
 @media screen and (max-width: 767.98px) {
   .mobile-menu-socials__list {
     display: flex;
@@ -382,13 +377,14 @@ a {
 
 .backdrop {
   position: fixed;
-  left: 0px;
   top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition-property: opacity;
+  transition-property: opacity, visibility;
 }
 .backdrop--is-hidden {
   opacity: 0;
@@ -761,6 +757,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
+  background-color: #2f303a;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
