--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,15 +1,15 @@
 .backdrop {
   position: fixed;
-  left: 0px;
   top: 0px;
-
+  left: 0px;
   width: 100%;
   height: 100%;
-  // z-index:1000;
+  z-index: 1000;
 
-  background: $dark-bg-cl-20;
+  background-color: $dark-bg-cl-20;
   opacity: 1;
-  transition-property: opacity;
+  
+  transition-property: opacity, visibility;
   @extend%animation;
 
   &--is-hidden {
